# basic_server

./: CMakeLists.txt
include/: clientSession.h  eventLoop.h  listenerSocket.h  server.h  socket.h  uuid.h
src/: clientSession.cpp  main.cpp  server.cpp  uuid.cpp
src/platform/linux/: eventLoop.cpp  socket.cpp
src/platform/windows/: eventLoop.cpp  socket.cpp
